@@ -8,6 +8,7 @@ Changes in synthPop version 0.1.9
   * dataObj-methods for covWt() and corWt()
   * dataObj-methods for meanWt() and varWt()
   * method addWeights<- to modify sampling weights based on output from calibSample()
+  * dataObj-method for quantileWt()
 
 Changes in synthPop version 0.1.8
   * remove S3-class spBwplot() -> only default method was implemented. Removed option to supply a list of populations; rewritten to use 'synthPopObj'-objects
